--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -174,9 +174,11 @@ img
   width: 225px;
   top: 0;
   right: -1px;
-  background-color: #DBD9D7;
-  border: 1px solid #CBC8C5;
+  background-color: #e3e1e0;
+  border: 1px solid #d3d0ce;
   box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
+  -mox-box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
+  -webkit-box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
   padding: 5px;
 }
 
@@ -231,7 +233,11 @@ img
 {
 padding: 1px 15px;
 width: 620px;
-background: none repeat scroll 0 0 rgba(233, 222, 209, 0.7);
+background-color: rgba(255,244,231,0.9);
+background: rgb(255,244,231) transparent;
+background: rgba(255,244,231,0.9);
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#9fff4e7, endColorstr=#9fff4e7);
+-ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#9fff4e7, endColorstr=#9fff4e7);
 margin-bottom: 20px;
 }
 
