--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -237,20 +237,24 @@ img
 
 #main
 {
+width: 650px;
+margin-bottom: 20px;
+}
+
+.post {
+margin-bottom: 10px;
 padding: 1px 15px;
-width: 620px;
 background-color: rgba(255,244,231,0.9);
 background: rgb(255,244,231) transparent;
 background: rgba(255,244,231,0.9);
 filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#9fff4e7, endColorstr=#9fff4e7);
 -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#9fff4e7, endColorstr=#9fff4e7);
-margin-bottom: 20px;
 }
 
 div.meta
 {
  margin-top: 1em;
- margin-bottom: 2em;
+ margin-bottom: 1em;
 }
 /* Formatting */
 
