--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,4 @@
+<div class="post">
 <h2><%= link_to_post(post) %></h2>
 
 <div class="entry-body">
@@ -11,4 +12,5 @@
       <li class="tags">Tagged <%= linked_tag_list(post.tags) %></li>
     <% end -%>
   </ul>
+</div>
 </div>
