--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -165,7 +165,17 @@ img
 }
 
 #disqus_thread {
-  margin-top: 20px;
+background-color: rgba(255,244,231,0.9);
+background: rgb(255,244,231) transparent;
+background: rgba(255,244,231,0.9);
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#9fff4e7, endColorstr=#9fff4e7);
+-ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#9fff4e7, endColorstr=#9fff4e7);
+border-top: 4px solid #E3E1E0;
+border-left: 1px solid #ffe4c5;
+border-right: 1px solid #ffe4c5;
+border-bottom: 1px solid #ffe4c5;
+margin-top: -12px;
+padding: 20px;
 }
 
 /* Two columns */
@@ -237,11 +247,12 @@ img
 
 #main
 {
-width: 650px;
+width: 648px;
 margin-bottom: 20px;
 }
 
 .post {
+border: 1px solid #ffe4c5;
 margin-bottom: 10px;
 padding: 1px 15px;
 background-color: rgba(255,244,231,0.9);
@@ -411,9 +422,11 @@ hr
 }
 
 .related {
-background-color: #ffecd6;
-  border: 1px solid silver;
-  padding: 10px;
+background-color: #E3E1E0;
+border: 1px solid silver;
+margin-bottom: 10px;
+padding: 10px;
+width: 628px;
 }
 
 /* Syntax */
