minor style updates

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,7 +56,7 @@ width: 900px;
   margin: -5px auto 0;
   width: 100%;
   min-width: 915px;
-  height: 55px;
+  height: 54px;
   background: none repeat scroll 0 0 #FFFFFF;
   border-bottom: 5px solid #D8C6AE;
   box-shadow: 0 0 15px rgba(90, 100, 117, 0.5);
@@ -73,7 +73,7 @@ width: 900px;
 .page_heading {
   font-size: 28px;
   color: #58266F !important;
-  margin-top: 0;
+  margin-top: 2px;
   margin-left: 5%;
   padding: 0;
   text-shadow: 1px 1px 5px #CCCCCC;
@@ -177,6 +177,7 @@ padding: 20px;
 #navigation h2
 {
   display: inline;
+  padding-left: 10px;
 }
 
 
@@ -214,7 +215,7 @@ padding: 20px;
 #navigation input
 {
   background-color: #FCFCF3;
-  border: 1px solid #D56C24;
+  border: 2px solid #D0B89F;
   width: 90%;
   margin-left: 10px;
   height: 20px;
