--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -151,11 +151,14 @@ img
 
 #disqus_thread {
 background: none repeat scroll 0 0 #FFFCF8;
-border-color: #FFECD6;
+border-color: #E3D6C5;
 border-style: solid;
-border-width: 4px 1px 1px;
+border-width: 4px 2px 2px;
 margin-top: -12px;
 padding: 20px;
+box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
+-moz-box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
+-webkit-box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
 }
 
 #discovery {
