updated site description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
   <title><%= html_title yield(:page_title) %></title>
   <meta property="og:title" content="<%= html_title yield(:page_title) %>" />
   <meta property="og:site_name" content="Pinball Map Blog" />
-  <meta property="og:description" content="Read the latest news from the Pinball Map HeadQUARTERS LOL" />
-  <meta name="description" content="Read the latest news from the Pinball Map HeadQUARTERS LOL" />
+  <meta property="og:description" content="Read the latest news from the Pinball Map headquarters" />
+  <meta name="description" content="Read the latest news from the Pinball Map headquarters" />
   <meta content='pinball, map, google map, locator, arcade, tournaments, league, apps' name='keywords' />
   <meta property="og:url" content="<%= 'http://'+request.host+request.fullpath %>" />
   <meta property="og:image" content="<%= image_path('pbm-og-image.png') %>" />
