--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <meta content='pinball, map, google map, locator, arcade, tournaments, league, apps' name='keywords' />
   <meta property="og:url" content="<%= 'http://'+request.host+request.fullpath %>" />
   <meta property="og:image" content="<%= image_path('pbm-og-image.png') %>" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tag %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %>
