new nonbrown style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,27 @@
 <body>
   <div id="page_container">
      <div id="header">
+        <span class="menu_link menu_home">
+          <ul id="nav">
+            <li class="first_header_link">
+              <a href="http://pinballmap.com">Home</a>
+            </li>
+            <li>
+              <a href="http://pinballmap.com/store">T-Shirts</a>
+            </li>
+            <li>
+              <a href="http://pinballmap.com/app">App</a>
+            </li>
+            <li>
+              <a href="http://pinballmap.com/faq">FAQ</a>
+            </li>
+            <li class="last_header_link">
+              <a href="http://pinballmap.com/donate">Donate</a>
+            </li>
+          </ul>
+        </span>
         <a class="page_heading" href="<%= root_url %>"><%= enki_config[:title] %></a>
-        <a href="http://pinballmap.com"><%= image_tag('pinballmapcom.jpg') %></a>
+        <a href="http://pinballmap.com"><%= image_tag('pinballmapcom_nodot.png') %></a>
       </div>
     <div id="content">
 
