--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,17 +11,18 @@
  *= require_self
  */
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@font-face {
+  font-family: 'Freight-MedSC';
+  src: url("freight-sans-medium-sc-opentype.otf");
+}
 
 /* High level containers */
 body
 {
-  background:url(asset-path('PPM-SplashTile-BW-Inverted.png', image)) repeat;
   background-size: 4px;
   background-color: #FFFFFF;
   color: #180E03;
-  font: normal 16px 'Open Sans', Helvetica, Arial, sans-serif;
+  font: normal 16px "Palatino","Georgia","Times New Roman", Times,serif;
   line-height: 1.6;
   padding: 0px;
   margin: 0px;
@@ -36,7 +37,7 @@ pre, code {
 {
   position: absolute;
   min-height: 400px;
-  color: #5C462C;
+  color: #303030;
   width: 100%;
 }
 
@@ -58,30 +59,30 @@ width: 900px;
   margin: 0 auto;
   width: 100%;
   min-width: 915px;
-  height: 49px;
+  height: 54px;
   text-align: center;
-  background: none repeat scroll 0 0 #FFFFFF;
-  border-bottom: 5px solid #D8C6AE;
-  box-shadow: 0 0 15px rgba(90, 100, 117, 0.5);
+  background: none repeat scroll 0 0 #d3ecff;
+  font-family: "Freight-MedSC",Helvetica,Arial,sans-serif;
 }
 
 #header a img {
     border: 0 none;
     margin: 0 auto;
-    width: 464px;
+    height: 54px;
 }
 
 #header a {
-  padding: 0 5px;
+  padding: 6px 5px 0;
+  font-weight: bold;
 }
 
 .page_heading {
   font-size: 28px;
-  color: #58266F !important;
+  color: #F53240 !important;
   padding: 0;
-  text-shadow: 1px 1px 5px #CCCCCC;
   line-height: 40px;
   vertical-align: top;
+  display: inline-block;
 }
 
 .page_heading a:hover {
@@ -90,8 +91,8 @@ width: 900px;
 
 h2
 {
-font-family: 'Montserrat';
-color: #706B65;
+font-family: "Freight-MedSC",Helvetica,Arial,sans-serif;
+color: #F53240;
 font-size: 24px;
 font-weight: bold;
 text-shadow: 0.1px 0.1px 0.1px white;
@@ -100,7 +101,7 @@ margin-top: 5px;
 
 h2 a, h3, h4, h5
 {
-  color: #706B65;
+  color: #F53240;
 }
 
 /* Text */
@@ -112,8 +113,81 @@ p
 
 strong
 {
-  color: #5C462C;
+  color: #303030;
 }
+
+/* dropdown menu */
+#header .menu_link ul {
+  font-size: 12px;
+  line-height: 24px;
+  margin-top: -2px;
+  padding-left: 0;
+  text-align: left;
+  display: none;
+  box-shadow: 5px 7px 10px rgba(90, 100, 117, 0.5);
+}
+#header .menu_link ul li.first_header_link a {
+  padding-top: 10px;
+}
+#header .menu_link ul li.last_header_link a {
+  padding-bottom: 10px;
+}
+#header span.menu_link {
+  width: 50px;
+  font-size: 32px;
+  line-height: 56px;
+  text-align: center;
+  float: left;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 54px;
+}
+#header span.menu_link:hover {
+  cursor: pointer;
+}
+#header span.menu_link:hover ul {
+  display: block;
+}
+#header .menu_link ul li {
+  list-style-type: none;
+  position: relative;
+  display: block;
+  padding: 0;
+  z-index: 500;
+}
+#header .menu_link ul {
+  font-size: 14px !important;
+  color: #55413F;
+  width: 165px;
+}
+#header .menu_link ul li a {
+  text-align: left !important;
+  padding: 4px 15px;
+  float: none;
+  display: block;
+  text-decoration: none;
+  vertical-align: middle;
+  width: auto !important;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: bold;
+  background-color: #EFEFEF;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#header .menu_link ul li a:hover {
+  color: #303030;
+  background-color: #d3ecff;
+}
+#header .menu_home ul li a {
+  background-color: #D3ECFF;
+}
+#header .menu_home ul li a:hover {
+  background-color: #EFEFEF;
+}
+
 /* Links */
 .openid
 {
@@ -125,7 +199,7 @@ strong
 
 a
 {
-  color: #8a3cae;
+  color: #F53240;
   text-decoration: none;
 }
 
@@ -136,7 +210,7 @@ small a, label a
 
 a:hover
 {
-  color: #58266F;
+  color: #383838;
   text-decoration: none;
 }
 
@@ -148,12 +222,12 @@ a:hover
 
 img
 {
-  border: solid 2px #b3afaa;
+  border: solid 2px #d3ecff;
 }
 
 #disqus_thread {
-background: none repeat scroll 0 0 #FFFCF8;
-border-color: #E3D6C5;
+background: none repeat scroll 0 0 #EFEFEF;
+border-color: #A9A9A9;
 border-style: solid;
 border-width: 4px 2px 2px;
 margin-top: -12px;
@@ -170,8 +244,7 @@ box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
 /* Two columns */
 #navigation
 {
-  background-color: #ECE2D8;
-  border: 2px solid #FDFCFE;
+  background-color: #d3ecff;
   position: absolute;
   width: 225px;
   right: -1px;
@@ -207,19 +280,23 @@ box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
 }
 #navigation a {
   text-transform: capitalize;
+  color: #303030;
+}
+#navigation a:hover {
+  color: #F53240;
 }
 
 #navigation h3
 {
   font-size: 1.2em;
   font-weight: bold;
-  font-family: verdana,arial,helvetica,sans-serif;
+  font-family: "Freight-MedSC",Helvetica,Arial,sans-serif;
 }
 
 #navigation input
 {
-  background-color: #FCFCF3;
-  border: 2px solid #D0B89F;
+  background-color: #FFFFFF;
+  border: 2px solid #A9A9A9;
   width: 90%;
   margin-left: 10px;
   height: 20px;
@@ -238,13 +315,16 @@ margin-bottom: 20px;
 }
 
 .post {
-background: none repeat scroll 0 0 rgba(253, 252, 254, 0.7);
-border: 2px solid #E3D6C5;
+background: #EFEFEF;
 margin-bottom: 10px;
 padding: 1px 15px;
 box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
 -moz-box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
 -webkit-box-shadow: 0 4px 5px rgba(90, 100, 117, 0.3);
+}
+
+.entry-body a {
+text-decoration: underline;
 }
 
 div.meta
@@ -271,7 +351,7 @@ div.meta
 
 .meta a, .archive-month .tags a
 {
-  color: #58266F;
+  color: #F53240;
   border-bottom: dotted 1px #bbbbbb;
 }
 
@@ -315,7 +395,7 @@ label
 
 textarea, select
 {
-  font: normal 12px verdana, arial, helvetica, sans-serif;
+  font: normal 12px "Freight-MedSC",Helvetica,Arial,sans-serif;
 }
 
 textarea
@@ -585,6 +665,15 @@ ol.CodeRay li { white-space: pre }
   #header a {
     padding: 0;
   }
+  .page_heading {
+    font-size: 18px;
+    width: 110px;
+    line-height: 22px;
+  }
+  #header a.page_heading {
+    padding-top: 5px;
+    text-align: center;
+  }
   #navigation input {
     width: 200px;
     padding: 0;
@@ -601,21 +690,64 @@ ol.CodeRay li { white-space: pre }
   #header {
     max-height: 89px;
     height: 100%;
-    background: none;
     border-bottom: none;
     box-shadow: none;
     margin-bottom: 10px;
+
   }
   #header a {
-    display: block;
-    background: #ffffff;
-  }
-  #header a:nth-child(2) {
-    border-bottom: 5px solid #D8C6AE;
-    width: 100%;
-    line-height: 12px;
+    display: inline-block;
   }
   #content {
     margin: 5px;
+  }
+  .page_heading {
+    font-size: 18px;
+    width: auto;
+    text-align: left;
+    line-height: 44px;
+  }
+  #header a.page_heading {
+    text-align: left;
+  }
+  #header a img {
+    width: 300px;
+    margin-top: 10px;
+  }
+}
+@media (max-width: 520px) { 
+  .page_heading {
+    font-size: 16px;
+    width: 80px;
+    line-height: 18px;
+  }
+  #header a.page_heading {
+    padding-top: 3px;
+  }
+  #header {
+    text-align: left;
+    height: 42px;
+  }
+  #header span.menu_link {
+    font-size: 22px;
+    line-height: 44px;
+    width: 40px;
+  }
+  #header a img {
+    margin-top: 5px;
+  }
+}
+@media (max-width: 450px) { 
+  .page_heading {
+    font-size: 13px;
+    width: 70px;
+    line-height: 14px;
+  }
+  #header a.page_heading {
+    padding-top: 8px;
+  }
+  #header a img {
+    width: 200px;
+    margin-top: 10px;
   }
 }
