--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
           </ul>
           <h2>RSS</h2>
           <ul>
-            <li><a href="http://blog.pinballmap.com/posts.atom">Click here to subscribe</a></li>          
+            <li><a href="http://blog.pinballmap.com/posts.atom">Click here to subscribe</a></li>
            </ul>
         <% end -%>
         <form method="get" id="sform" action="http://www.google.com/search">
@@ -88,7 +88,7 @@
         </form>
       </div>
 
-      <div id="footer"><%= enki_config[:title] %> &#169; <%= enki_config[:author, :name] %>. Valid <a href="http://validator.w3.org/check?uri=referer">HTML5</a> and <%= link_to "ATOM", "http://feedvalidator.org/check.cgi?url=#{enki_config[:url]}/posts.atom" %>. Powered by <a href="http://www.enkiblog.com" title="A Ruby on Rails blogging app for the fashionable developer">Enki</a>.</div>
+      <div id="footer"><%= enki_config[:title] %> &#169; <%= enki_config[:author, :name] %>. Valid <a href="http://validator.w3.org/check?uri=referer">HTML5</a> and <%= link_to "ATOM", "http://feedvalidator.org/check.cgi?url=#{enki_config[:url]}/posts.atom" %>. Powered by <a href="https://github.com/xaviershay/enki" title="A Ruby on Rails blogging app for the fashionable developer">Enki</a>.</div>
     </div>
   </div>
       <script type="text/javascript">
@@ -103,6 +103,6 @@
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
     </script>
-    
+
 </body>
 </html>
