--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,7 @@
 
 @font-face {
   font-family: 'Freight-MedSC';
-  src: url('freight-sans-medium-sc-opentype.otf') format('opentype');
+  src: font-url('freight-sans-medium-sc-opentype.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
