updated blog menu links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,24 +34,27 @@
         <span class="menu_link menu_home">
           <ul id="nav">
             <li class="first_header_link">
-              <a href="http://pinballmap.com">Home</a>
+              <a href="https://pinballmap.com">Home</a>
             </li>
             <li>
-              <a href="http://pinballmap.com/store">T-Shirts</a>
+              <a href="https://pinballmap.com/store">T-Shirts</a>
             </li>
             <li>
-              <a href="http://pinballmap.com/app">App</a>
+              <a href="https://pinballmap.com/app">App</a>
             </li>
             <li>
-              <a href="http://pinballmap.com/faq">FAQ</a>
+              <a href="https://pinballmap.com/faq">FAQ</a>
+            </li>
+            <li>
+              <a href="https://pinballmap.com/portland/about">Contact</a>
             </li>
             <li class="last_header_link">
-              <a href="http://pinballmap.com/donate">Donate</a>
+              <a href="https://pinballmap.com/donate">Donate</a>
             </li>
           </ul>
         </span>
         <a class="page_heading" href="<%= root_url %>"><%= enki_config[:title] %></a>
-        <a href="http://pinballmap.com"><%= image_tag('pinballmapcom_nodot.png') %></a>
+        <a href="https://pinballmap.com"><%= image_tag('pinballmapcom_nodot.png') %></a>
       </div>
     <div id="content">
 
