--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           </ul>
         </span>
         <a class="page_heading" href="<%= root_url %>"><%= enki_config[:title] %></a>
-        <a href="https://pinballmap.com"><%= image_tag('pinballmapcom_nodot.png') %></a>
+        <a href="https://pinballmap.com"><%= image_tag('pinballmap-logo.png') %></a>
       </div>
     <div id="content">
 
